<resources>
    <string name="app_name">DrawerTest3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_account">My Account</string>
    <string name="addBookingORdonation">Add Donation/Booking</string>
    <string name="myBookings">My Bookings</string>
    <string name="forum">Forum</string>
    <string name="adminlogs">Admin Logs</string>
    <string name="logout">Log out</string>
</resources>