<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_account" />
        <item
            android:id="@+id/addBookingORdonation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/addBookingORdonation" />
        <item
            android:id="@+id/myBookings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/myBookings"
            />
        <item
            android:id="@+id/Forum"
            android:icon="@drawable/forum"
            android:title="@string/forum"/>
        <item
            android:id="@+id/AdminLogs"
            android:icon="@drawable/notes"
            android:title="@string/adminlogs"/>
        <item
            android:id="@+id/Logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>
</menu>