<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.drawertest3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/my_account"
        android:name="com.example.drawertest3.ui.myaccount.MyAccountFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_myaccount" />

    <fragment
        android:id="@+id/addBookingORdonation"
        android:name="com.example.drawertest3.ui.addbkordono.AddBkorDonoFragment"
        android:label="@string/addBookingORdonation"
        tools:layout="@layout/fragment_addbookingordonation" />

    <fragment
        android:id="@+id/myBookings"
        android:name="com.example.drawertest3.ui.mybookings.MyBookingsFragment"
        android:label="@string/myBookings"
        tools:layout="@layout/fragment_my_bookings"/>

    <fragment
        android:id="@+id/Forum"
        android:name="com.example.drawertest3.ui.forum.ForumFragment"
        android:label="@string/forum"
        tools:layout="@layout/fragment_forum"/>
    <fragment
        android:id="@+id/AdminLogs"
        android:name="com.example.drawertest3.ui.adminlogs.AdminLogsFragment"
        android:label="@string/adminlogs"
        tools:layout="@layout/fragment_admin_logs"
        />
</navigation>